tests/rascal/negative/type_errors/L1/15_expression_ES10_D4_69.ob
MODULE Test15;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               r := q;
               x := (x + (x MOD 0));
               r := (x <= y);
               y := ((((- 2) + 2) DIV ((0 - y) DIV (1223 MOD z))) * 1);
  (* error *)  z := ((- 1) + 0);
               p := (0 < y);
               q := r;
               y := x;
               p := p;
               z := x
END Test15.